versions/0.8.0/_sources/refs/_aws-cdk_aws-config.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"tFiP1mORv13dPnQLLosXKMylgH/UNGnovErGnB1NLCA="}

@aws-cdk/aws-config
===================

.. mdinclude:: ./__aws-cdk_aws-config.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-config

ConfigRuleArn
^^^^^^^^^^^^^

.. py:class:: ConfigRuleArn([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ConfigRuleComplianceType
^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ConfigRuleComplianceType([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ConfigRuleId
^^^^^^^^^^^^

.. py:class:: ConfigRuleId([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-config.cloudformation

ConfigRuleResource
~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigRuleResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ConfigRuleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ConfigRuleResource``
   :type properties: :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigRuleResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: configRuleArn

      :type: :py:class:`~@aws-cdk/aws-config.ConfigRuleArn` *(readonly)*


   .. py:attribute:: configRuleComplianceType

      :type: :py:class:`~@aws-cdk/aws-config.ConfigRuleComplianceType` *(readonly)*


   .. py:attribute:: configRuleId

      :type: :py:class:`~@aws-cdk/aws-config.ConfigRuleId` *(readonly)*

   .. py:class:: ScopeProperty



      .. py:attribute:: complianceResourceId

         ``ConfigRuleResource.ScopeProperty.ComplianceResourceId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-scope.html#cfn-config-configrule-scope-complianceresourceid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: complianceResourceTypes

         ``ConfigRuleResource.ScopeProperty.ComplianceResourceTypes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-scope.html#cfn-config-configrule-scope-complianceresourcetypes


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: tagKey

         ``ConfigRuleResource.ScopeProperty.TagKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-scope.html#cfn-config-configrule-scope-tagkey


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: tagValue

         ``ConfigRuleResource.ScopeProperty.TagValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-scope.html#cfn-config-configrule-scope-tagvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: SourceDetailProperty



      .. py:attribute:: eventSource

         ``ConfigRuleResource.SourceDetailProperty.EventSource``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source-sourcedetails.html#cfn-config-configrule-source-sourcedetail-eventsource


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: maximumExecutionFrequency

         ``ConfigRuleResource.SourceDetailProperty.MaximumExecutionFrequency``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source-sourcedetails.html#cfn-config-configrule-sourcedetail-maximumexecutionfrequency


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: messageType

         ``ConfigRuleResource.SourceDetailProperty.MessageType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source-sourcedetails.html#cfn-config-configrule-source-sourcedetail-messagetype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SourceProperty



      .. py:attribute:: owner

         ``ConfigRuleResource.SourceProperty.Owner``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source.html#cfn-config-configrule-source-owner


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: sourceDetails

         ``ConfigRuleResource.SourceProperty.SourceDetails``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source.html#cfn-config-configrule-source-sourcedetails


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigRuleResource.SourceDetailProperty` or undefined


      .. py:attribute:: sourceIdentifier

         ``ConfigRuleResource.SourceProperty.SourceIdentifier``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source.html#cfn-config-configrule-source-sourceidentifier


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ConfigRuleResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigRuleResourceProps



   .. py:attribute:: source

      ``AWS::Config::ConfigRule.Source``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-source


      :type: :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigRuleResource.SourceProperty` or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: configRuleName

      ``AWS::Config::ConfigRule.ConfigRuleName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-configrulename


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::Config::ConfigRule.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: inputParameters

      ``AWS::Config::ConfigRule.InputParameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-inputparameters


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: maximumExecutionFrequency

      ``AWS::Config::ConfigRule.MaximumExecutionFrequency``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-maximumexecutionfrequency


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: scope

      ``AWS::Config::ConfigRule.Scope``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-scope


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigRuleResource.ScopeProperty` or undefined


ConfigurationRecorderResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationRecorderResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ConfigurationRecorderResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ConfigurationRecorderResource``
   :type properties: :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigurationRecorderResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: RecordingGroupProperty



      .. py:attribute:: allSupported

         ``ConfigurationRecorderResource.RecordingGroupProperty.AllSupported``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configurationrecorder-recordinggroup.html#cfn-config-configurationrecorder-recordinggroup-allsupported


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: includeGlobalResourceTypes

         ``ConfigurationRecorderResource.RecordingGroupProperty.IncludeGlobalResourceTypes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configurationrecorder-recordinggroup.html#cfn-config-configurationrecorder-recordinggroup-includeglobalresourcetypes


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: resourceTypes

         ``ConfigurationRecorderResource.RecordingGroupProperty.ResourceTypes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configurationrecorder-recordinggroup.html#cfn-config-configurationrecorder-recordinggroup-resourcetypes


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined



ConfigurationRecorderResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationRecorderResourceProps



   .. py:attribute:: roleArn

      ``AWS::Config::ConfigurationRecorder.RoleARN``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configurationrecorder.html#cfn-config-configurationrecorder-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: configurationRecorderName

      ``AWS::Config::ConfigurationRecorder.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configurationrecorder.html#cfn-config-configurationrecorder-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: recordingGroup

      ``AWS::Config::ConfigurationRecorder.RecordingGroup``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configurationrecorder.html#cfn-config-configurationrecorder-recordinggroup


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigurationRecorderResource.RecordingGroupProperty` or undefined


DeliveryChannelResource
~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeliveryChannelResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DeliveryChannelResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DeliveryChannelResource``
   :type properties: :py:class:`~@aws-cdk/aws-config.cloudformation.DeliveryChannelResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ConfigSnapshotDeliveryPropertiesProperty



      .. py:attribute:: deliveryFrequency

         ``DeliveryChannelResource.ConfigSnapshotDeliveryPropertiesProperty.DeliveryFrequency``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-deliverychannel-configsnapshotdeliveryproperties.html#cfn-config-deliverychannel-configsnapshotdeliveryproperties-deliveryfrequency


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



DeliveryChannelResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeliveryChannelResourceProps



   .. py:attribute:: s3BucketName

      ``AWS::Config::DeliveryChannel.S3BucketName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-deliverychannel.html#cfn-config-deliverychannel-s3bucketname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: configSnapshotDeliveryProperties

      ``AWS::Config::DeliveryChannel.ConfigSnapshotDeliveryProperties``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-deliverychannel.html#cfn-config-deliverychannel-configsnapshotdeliveryproperties


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-config.cloudformation.DeliveryChannelResource.ConfigSnapshotDeliveryPropertiesProperty` or undefined


   .. py:attribute:: deliveryChannelName

      ``AWS::Config::DeliveryChannel.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-deliverychannel.html#cfn-config-deliverychannel-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: s3KeyPrefix

      ``AWS::Config::DeliveryChannel.S3KeyPrefix``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-deliverychannel.html#cfn-config-deliverychannel-s3keyprefix


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snsTopicArn

      ``AWS::Config::DeliveryChannel.SnsTopicARN``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-deliverychannel.html#cfn-config-deliverychannel-snstopicarn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-config

