versions/0.8.1/_sources/refs/_aws-cdk_aws-config.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"JqDtqutxGQZkCCuOZlGZ4bqfwV74sLlMWtTozWeoqk8="}

@aws-cdk/aws-config
===================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/config/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:config:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="config" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>config</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:config:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='config', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-config/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-config@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-config": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-config@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-config/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-config@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-config": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-config@0.8.1



.. mdinclude:: ./__aws-cdk_aws-config.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-config

ConfigRuleArn
^^^^^^^^^^^^^

.. py:class:: ConfigRuleArn([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.config.ConfigRuleArn;

      .. code-tab:: javascript

         const { ConfigRuleArn } = require('@aws-cdk/aws-config');

      .. code-tab:: typescript

         import { ConfigRuleArn } from '@aws-cdk/aws-config';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ConfigRuleComplianceType
^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ConfigRuleComplianceType([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.config.ConfigRuleComplianceType;

      .. code-tab:: javascript

         const { ConfigRuleComplianceType } = require('@aws-cdk/aws-config');

      .. code-tab:: typescript

         import { ConfigRuleComplianceType } from '@aws-cdk/aws-config';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ConfigRuleId
^^^^^^^^^^^^

.. py:class:: ConfigRuleId([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.config.ConfigRuleId;

      .. code-tab:: javascript

         const { ConfigRuleId } = require('@aws-cdk/aws-config');

      .. code-tab:: typescript

         import { ConfigRuleId } from '@aws-cdk/aws-config';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-config.cloudformation

ConfigRuleResource
~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigRuleResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.config.cloudformation.ConfigRuleResource;

      .. code-tab:: javascript

         const { cloudformation.ConfigRuleResource } = require('@aws-cdk/aws-config');

      .. code-tab:: typescript

         import { cloudformation.ConfigRuleResource } from '@aws-cdk/aws-config';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ConfigRuleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ConfigRuleResource``
   :type properties: :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigRuleResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: configRuleArn

      :type: :py:class:`~@aws-cdk/aws-config.ConfigRuleArn` *(readonly)*


   .. py:attribute:: configRuleComplianceType

      :type: :py:class:`~@aws-cdk/aws-config.ConfigRuleComplianceType` *(readonly)*


   .. py:attribute:: configRuleId

      :type: :py:class:`~@aws-cdk/aws-config.ConfigRuleId` *(readonly)*

   .. py:class:: ScopeProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.config.cloudformation.ConfigRuleResource.ScopeProperty;

         .. code-tab:: javascript

            // cloudformation.ConfigRuleResource.ScopeProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConfigRuleResource.ScopeProperty } from '@aws-cdk/aws-config';





      .. py:attribute:: complianceResourceId

         ``ConfigRuleResource.ScopeProperty.ComplianceResourceId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-scope.html#cfn-config-configrule-scope-complianceresourceid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: complianceResourceTypes

         ``ConfigRuleResource.ScopeProperty.ComplianceResourceTypes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-scope.html#cfn-config-configrule-scope-complianceresourcetypes


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: tagKey

         ``ConfigRuleResource.ScopeProperty.TagKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-scope.html#cfn-config-configrule-scope-tagkey


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: tagValue

         ``ConfigRuleResource.ScopeProperty.TagValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-scope.html#cfn-config-configrule-scope-tagvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: SourceDetailProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.config.cloudformation.ConfigRuleResource.SourceDetailProperty;

         .. code-tab:: javascript

            // cloudformation.ConfigRuleResource.SourceDetailProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConfigRuleResource.SourceDetailProperty } from '@aws-cdk/aws-config';





      .. py:attribute:: eventSource

         ``ConfigRuleResource.SourceDetailProperty.EventSource``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source-sourcedetails.html#cfn-config-configrule-source-sourcedetail-eventsource


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: maximumExecutionFrequency

         ``ConfigRuleResource.SourceDetailProperty.MaximumExecutionFrequency``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source-sourcedetails.html#cfn-config-configrule-sourcedetail-maximumexecutionfrequency


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: messageType

         ``ConfigRuleResource.SourceDetailProperty.MessageType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source-sourcedetails.html#cfn-config-configrule-source-sourcedetail-messagetype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.config.cloudformation.ConfigRuleResource.SourceProperty;

         .. code-tab:: javascript

            // cloudformation.ConfigRuleResource.SourceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConfigRuleResource.SourceProperty } from '@aws-cdk/aws-config';





      .. py:attribute:: owner

         ``ConfigRuleResource.SourceProperty.Owner``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source.html#cfn-config-configrule-source-owner


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: sourceDetails

         ``ConfigRuleResource.SourceProperty.SourceDetails``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source.html#cfn-config-configrule-source-sourcedetails


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigRuleResource.SourceDetailProperty` or undefined


      .. py:attribute:: sourceIdentifier

         ``ConfigRuleResource.SourceProperty.SourceIdentifier``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configrule-source.html#cfn-config-configrule-source-sourceidentifier


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ConfigRuleResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigRuleResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.config.cloudformation.ConfigRuleResourceProps;

      .. code-tab:: javascript

         // cloudformation.ConfigRuleResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ConfigRuleResourceProps } from '@aws-cdk/aws-config';





   .. py:attribute:: source

      ``AWS::Config::ConfigRule.Source``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-source


      :type: :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigRuleResource.SourceProperty` or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: configRuleName

      ``AWS::Config::ConfigRule.ConfigRuleName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-configrulename


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::Config::ConfigRule.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: inputParameters

      ``AWS::Config::ConfigRule.InputParameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-inputparameters


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: maximumExecutionFrequency

      ``AWS::Config::ConfigRule.MaximumExecutionFrequency``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-maximumexecutionfrequency


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: scope

      ``AWS::Config::ConfigRule.Scope``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configrule.html#cfn-config-configrule-scope


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigRuleResource.ScopeProperty` or undefined


ConfigurationRecorderResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationRecorderResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.config.cloudformation.ConfigurationRecorderResource;

      .. code-tab:: javascript

         const { cloudformation.ConfigurationRecorderResource } = require('@aws-cdk/aws-config');

      .. code-tab:: typescript

         import { cloudformation.ConfigurationRecorderResource } from '@aws-cdk/aws-config';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ConfigurationRecorderResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ConfigurationRecorderResource``
   :type properties: :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigurationRecorderResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: RecordingGroupProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.config.cloudformation.ConfigurationRecorderResource.RecordingGroupProperty;

         .. code-tab:: javascript

            // cloudformation.ConfigurationRecorderResource.RecordingGroupProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConfigurationRecorderResource.RecordingGroupProperty } from '@aws-cdk/aws-config';





      .. py:attribute:: allSupported

         ``ConfigurationRecorderResource.RecordingGroupProperty.AllSupported``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configurationrecorder-recordinggroup.html#cfn-config-configurationrecorder-recordinggroup-allsupported


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: includeGlobalResourceTypes

         ``ConfigurationRecorderResource.RecordingGroupProperty.IncludeGlobalResourceTypes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configurationrecorder-recordinggroup.html#cfn-config-configurationrecorder-recordinggroup-includeglobalresourcetypes


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: resourceTypes

         ``ConfigurationRecorderResource.RecordingGroupProperty.ResourceTypes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-configurationrecorder-recordinggroup.html#cfn-config-configurationrecorder-recordinggroup-resourcetypes


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined



ConfigurationRecorderResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationRecorderResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.config.cloudformation.ConfigurationRecorderResourceProps;

      .. code-tab:: javascript

         // cloudformation.ConfigurationRecorderResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ConfigurationRecorderResourceProps } from '@aws-cdk/aws-config';





   .. py:attribute:: roleArn

      ``AWS::Config::ConfigurationRecorder.RoleARN``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configurationrecorder.html#cfn-config-configurationrecorder-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: configurationRecorderName

      ``AWS::Config::ConfigurationRecorder.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configurationrecorder.html#cfn-config-configurationrecorder-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: recordingGroup

      ``AWS::Config::ConfigurationRecorder.RecordingGroup``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-configurationrecorder.html#cfn-config-configurationrecorder-recordinggroup


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-config.cloudformation.ConfigurationRecorderResource.RecordingGroupProperty` or undefined


DeliveryChannelResource
~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeliveryChannelResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.config.cloudformation.DeliveryChannelResource;

      .. code-tab:: javascript

         const { cloudformation.DeliveryChannelResource } = require('@aws-cdk/aws-config');

      .. code-tab:: typescript

         import { cloudformation.DeliveryChannelResource } from '@aws-cdk/aws-config';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DeliveryChannelResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DeliveryChannelResource``
   :type properties: :py:class:`~@aws-cdk/aws-config.cloudformation.DeliveryChannelResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ConfigSnapshotDeliveryPropertiesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.config.cloudformation.DeliveryChannelResource.ConfigSnapshotDeliveryPropertiesProperty;

         .. code-tab:: javascript

            // cloudformation.DeliveryChannelResource.ConfigSnapshotDeliveryPropertiesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeliveryChannelResource.ConfigSnapshotDeliveryPropertiesProperty } from '@aws-cdk/aws-config';





      .. py:attribute:: deliveryFrequency

         ``DeliveryChannelResource.ConfigSnapshotDeliveryPropertiesProperty.DeliveryFrequency``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-config-deliverychannel-configsnapshotdeliveryproperties.html#cfn-config-deliverychannel-configsnapshotdeliveryproperties-deliveryfrequency


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



DeliveryChannelResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeliveryChannelResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.config.cloudformation.DeliveryChannelResourceProps;

      .. code-tab:: javascript

         // cloudformation.DeliveryChannelResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.DeliveryChannelResourceProps } from '@aws-cdk/aws-config';





   .. py:attribute:: s3BucketName

      ``AWS::Config::DeliveryChannel.S3BucketName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-deliverychannel.html#cfn-config-deliverychannel-s3bucketname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: configSnapshotDeliveryProperties

      ``AWS::Config::DeliveryChannel.ConfigSnapshotDeliveryProperties``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-deliverychannel.html#cfn-config-deliverychannel-configsnapshotdeliveryproperties


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-config.cloudformation.DeliveryChannelResource.ConfigSnapshotDeliveryPropertiesProperty` or undefined


   .. py:attribute:: deliveryChannelName

      ``AWS::Config::DeliveryChannel.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-deliverychannel.html#cfn-config-deliverychannel-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: s3KeyPrefix

      ``AWS::Config::DeliveryChannel.S3KeyPrefix``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-deliverychannel.html#cfn-config-deliverychannel-s3keyprefix


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snsTopicArn

      ``AWS::Config::DeliveryChannel.SnsTopicARN``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-config-deliverychannel.html#cfn-config-deliverychannel-snstopicarn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-config

